
-BUG FIX: Miscellaneous fixes

-Added option for plugin developers to automatically include their user-input validation for the admin settings page within the plugin's class file

-Added Admin Config settings into these admin interface sections (these config settings are now editable in the admin interface): Proxies

-Added setting to proxies that allows adding server domains to SKIP using proxies for (if the server ALWAYS blocks proxies)

-Miscellaneous user experience improvements

-Code optimization / cleanup

-Upgraded OKcoin API to v5

-Updated documentation

IMPORTANT *UPGRADE* NOTICE:

v6.00.29 and higher restructures the 'price-target-alert' plugin. USE THE LATEST/UPGRADED PLUG_CONF.PHP,
AND MIGRATE YOUR EXISTING CUSTOM PRICE TARGET ALERTS TO THE NEW FORMAT.

v6.00.29 and higher renames / restructures MANY settings in the config. USE THE LATEST/UPGRADED CONFIG.PHP,
AND MIGRATE YOUR EXISTING CUSTOM NEWS FEEDS TO THE NEW FORMAT.

-v6.00.29 AND HIGHER RESETS LIGHT (TIME PERIOD) CHARTS FROM ARCHIVAL DATA, ONE-TIME DURING UPGRADES FROM V6.00.26 OR LOWER.

-------------------------------------------------------------------



-------------------------------------------------------------------
6.00.31:

-BUG FIX: Miscellaneous fixes

-Miscellaneous user experience improvements

-Code optimization / cleanup

-Updated documentation

IMPORTANT *UPGRADE* NOTICE:

v6.00.29 and higher restructures the 'price-target-alert' plugin. USE THE LATEST/UPGRADED PLUG_CONF.PHP,
AND MIGRATE YOUR EXISTING CUSTOM PRICE TARGET ALERTS TO THE NEW FORMAT.

v6.00.29 and higher renames / restructures MANY settings in the config. USE THE LATEST/UPGRADED CONFIG.PHP,
AND MIGRATE YOUR EXISTING CUSTOM NEWS FEEDS TO THE NEW FORMAT.

-v6.00.29 AND HIGHER RESETS LIGHT (TIME PERIOD) CHARTS FROM ARCHIVAL DATA, ONE-TIME DURING UPGRADES FROM V6.00.26 OR LOWER.

-------------------------------------------------------------------








